force-app/main/default/objects/BrillioFC__Page_Layout__c/BrillioFC__Page_Layout__c.object-meta.xml
<CustomObject>
    <label>ForceClinic Page Layout</label>
    <nameField>
        <displayFormat>PL-{0000}</displayFormat>
        <label>ForceClinic Page Layout Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ForceClinic Page Layouts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>