force-app/main/default/objects/BrillioFC__Page_Layout__c/fields/BrillioFC__LayoutFields_URL__c.field-meta.xml
<CustomField>
    <fullName>BrillioFC__LayoutFields_URL__c</fullName>
    <label>LayoutFields URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>