force-app/main/default/objects/BrillioFC__Page_Layout__c/fields/BrillioFC__LayoutType__c.field-meta.xml
<CustomField>
    <fullName>BrillioFC__LayoutType__c</fullName>
    <label>LayoutType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>