force-app/main/default/objects/BrillioFC__Page_Layout__c/fields/BrillioFC__ManageableState__c.field-meta.xml
<CustomField>
    <fullName>BrillioFC__ManageableState__c</fullName>
    <label>ManageableState</label>
    <length>25</length>
    <type>Text</type>
</CustomField>