force-app/main/default/objects/BrillioFC__Page_Layout__c/fields/BrillioFC__Name__c.field-meta.xml
<CustomField>
    <fullName>BrillioFC__Name__c</fullName>
    <label>Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>