force-app/main/default/objects/BrillioFC__Page_Layout__c/fields/BrillioFC__Object_Detail__c.field-meta.xml
<CustomField>
    <fullName>BrillioFC__Object_Detail__c</fullName>
    <label>Object Detail</label>
    <referenceTo>BrillioFC__Object_Detail__c</referenceTo>
    <relationshipLabel>ForceClinic Page Layouts</relationshipLabel>
    <relationshipName>Page_Layouts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>