force-app/main/default/objects/BrillioFC__Page_Layout__c/fields/BrillioFC__Pagelayout_Assignment_Count__c.field-meta.xml
<CustomField>
    <fullName>BrillioFC__Pagelayout_Assignment_Count__c</fullName>
    <label>Pagelayout Assignment Count</label>
    <summaryForeignKey>BrillioFC__Record_Type_Layout_Assignment__c.BrillioFC__Page_Layout__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>