force-app/main/default/objects/BrillioFC__Page_Layout__c/fields/BrillioFC__ShowSubmitAndAttachButton__c.field-meta.xml
<CustomField>
    <fullName>BrillioFC__ShowSubmitAndAttachButton__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ShowSubmitAndAttachButton</label>
    <type>Checkbox</type>
</CustomField>