force-app/main/default/objects/BrillioFC__Page_Layout__c/fields/BrillioFC__Table_Enum_Or_Id__c.field-meta.xml
<CustomField>
    <fullName>BrillioFC__Table_Enum_Or_Id__c</fullName>
    <label>Table Enum Or Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>