force-app/main/default/objects/BrillioFC__Page_Layout__c/fields/BrillioFC__Total_Related_Lists__c.field-meta.xml
<CustomField>
    <fullName>BrillioFC__Total_Related_Lists__c</fullName>
    <label>Total Related Lists</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>